# saga

./: .gitignore  .gitmodules  .pylintrc  CONSTRAINTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  Readme.md  conf.py  constraints_example.py  git push  index.rst  push_pypi.sh  pyproject.toml  release.sh  requirements.txt  setup.py
.devcontainer/: post-create.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
analyses/: .gitignore  README.md  changes.py  exp_benchmarking.py  exp_wfcommons.py
analyses/adversarial/: .gitignore  README.md  app.py  common.py  main.py  (+12 more)
examples/: range_suffrage.py
experiments/: .gitignore  Dockerfile  app.py  changes.py  docker-compose.yml  exp_benchmarking.py  exp_compare_all.py  exp_ensemble.py  exp_parametric.py  exp_parametric.sl  exp_stochastic_benchmarking.py  exp_wfcommons.py  index.rst  main.py  plot.py  post_benchmarking.py  post_compare_all.py  post_explain.py  post_parametric.py  post_parametric_agg.py  post_stochastic_benchmarking.py  post_tab_results.py  prepare_datasets.py  prepare_stochastic_datasets.py  reproduce-parametric-sc.sh  requirements.txt  scratch.py  shuffle_datasets.py  test_append_only.py  test_constraints.py
frontend/: package-lock.json  package.json
openai/: README.md
saga/: base.py  data.py  hybrid.py  index.rst  scheduler.py
scripts/: ml-scheduling.ipynb  reproduce-parametric-sc-readme.md  reproduce-parametric-sc.ipynb  rl-scheduling.py  wfcommons_problem_instances.ipynb
src/: setup.py
tests/: compare.py  random_graphs.py  random_variables.py  schedulers.py  test_data_generators.py  test_duplication.py  test_execution.py  test_fifo_scheduler.py  test_inspirit_fifo.py  test_node_constraints.py  test_online_constraints.py  test_online_environment.py  test_online_step_strategies.py  test_overlap.py  test_random_variables.py  test_reschedule_count.py  test_scale_to_ccr.py  test_schedule_throughput.py  test_schedulers.py  test_sheft_nan_selfloops.py  test_stochastic_constraints.py
(+2276 files in other folders)
