[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anrg-saga"
version = "1.0.0"
description = "Scheduling Algorithms Gathered - collection of task graph scheduling algorithms"
readme = "README.md"
authors = [{name = "ANRG USC", email = "anrg@usc.edu"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    # Core dependencies from SBOM
    "networkx",
    "numpy", 
    "pandas",
    "scipy",
    "matplotlib",
    "joblib>=1.3.2",
    "statsmodels>=0.14.1",
    "seaborn>=0.13.2",
    "plotly",
    "kaleido",
    "gitpython",
    "wfcommons",
    "dill",
]

[project.optional-dependencies]
smt = ["pysmt"]
viz = ["pygraphviz"]
web = ["streamlit"] 
test = ["pytest>=7.0.0", "pytest-timeout>=2.1.0"]
all = [
    "pysmt", 
    "pygraphviz", 
    "streamlit",
    "pytest>=7.0.0", 
    "pytest-timeout>=2.1.0"
]

[project.urls]
Repository = "https://github.com/ANRGUSC/saga"
Issues = "https://github.com/ANRGUSC/saga/issues"

[tool.setuptools.packages.find]
where = ["src"]