[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anrg-saga"
version = "2.0.2"
description = "Scheduling Algorithms Gathered - collection of task graph scheduling algorithms"
readme = "README.md"
authors = [{name = "ANRG USC", email = "anrg@usc.edu"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "networkx",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pydantic>=2.0",
    "gitpython",
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "mypy>=0.991",
    "tqdm",
    "filelock",
    "pysmt",
    "z3-solver",
    "pygraphviz",
    "wfcommons; sys_platform != 'win32'",
]

[project.urls]
Repository = "https://github.com/ANRGUSC/saga"
Issues = "https://github.com/ANRGUSC/saga/issues"

[tool.setuptools.packages.find]
where = ["src"]